@@ -1,6 +1,6 @@
 Package: lme4breeding
-Version: 1.0.60
-Date: 2025-04-27
+Version: 1.0.61
+Date: 2025-05-08
 Title: Relationship-Based Mixed-Effects Models
 Authors@R: c(
     person("Giovanny","Covarrubias-Pazaran", email="cova_ruber@live.com.mx", role=c("aut","cre"),
